@@ -1,3 +1,9 @@
+2012-12-12  Tom Lane  <tgl@sss.pgh.pa.us>
+
+	* libtiff/tif_print.c: Back-patch recent fixes in
+	TIFFPrintDirectory to make it handle field_passcount fields sanely
+	for both TIFF_VARIABLE and TIFF_VARIABLE2 cases.
+	
 2012-12-10  Tom Lane  <tgl@sss.pgh.pa.us>
 
 	* tools/ppm2tiff.c: Back-patch fix for CVE-2012-4564.
